# Vultorch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_CN.md  build.bat  build.ps1  build.sh  build_wheels.bat  build_wheels.ps1  build_wheels.sh  mkdocs.yml  mkdocs_build_ignore.bat  pyproject.toml  pytest.ini  upload_wheels.ps1
.github/workflows/: build-wheels.yml
docs/: index.html
docs/tutorial/: 404.html  index.html  sitemap.xml
docs/tutorial/01_hello_tensor/: index.html
docs/tutorial/02_multi_panel/: index.html
docs/tutorial/03_training_test/: index.html
docs/tutorial/04_conway/: index.html
docs/tutorial/05_image_viewer/: index.html
docs/tutorial/06_pixel_canvas/: index.html
docs/tutorial/07_multichannel/: index.html
docs/tutorial/08_gt_vs_pred/: index.html
docs/tutorial/09_live_tuning/: index.html
docs/tutorial/10_gaussian2d/: index.html
docs/tutorial/11_3d_inspector/: index.html
docs/tutorial/12_neural_workstation/: index.html
docs/tutorial/13_snake_rl/: index.html
docs/tutorial/14_screen_recorder/: index.html
docs/tutorial/15_space_battle/: index.html
docs/tutorial/api/: index.html
docs/tutorial/assets/: extra.css
docs/tutorial/overrides/: main.html
docs/tutorial/search/: search_index.json
docs/tutorial/zh/: index.html
docs/tutorial/zh/01_hello_tensor/: index.html
docs/tutorial/zh/02_multi_panel/: index.html
docs/tutorial/zh/03_training_test/: index.html
docs/tutorial/zh/04_conway/: index.html
docs/tutorial/zh/05_image_viewer/: index.html
docs/tutorial/zh/06_pixel_canvas/: index.html
docs/tutorial/zh/07_multichannel/: index.html
docs/tutorial/zh/08_gt_vs_pred/: index.html
docs/tutorial/zh/09_live_tuning/: index.html
docs/tutorial/zh/10_gaussian2d/: index.html
docs/tutorial/zh/11_3d_inspector/: index.html
docs/tutorial/zh/12_neural_workstation/: index.html
docs/tutorial/zh/13_snake_rl/: index.html
docs/tutorial/zh/14_screen_recorder/: index.html
docs/tutorial/zh/15_space_battle/: index.html
docs/tutorial/zh/api/: index.html
examples/: 01_hello_tensor.py  02_imgui_controls.py  03_scene_3d.py  03_training_test.py  04_conway.py  04_docking_layout.py  05_image_viewer.py  05_zero_copy.py  06_pixel_canvas.py  07_multichannel.py  08_gt_vs_pred.py  09_live_tuning.py  10_gaussian2d.py  11_3d_inspector.py  12_neural_workstation.py  13_snake_rl.py  14_screen_recorder.py  test.py
scripts/: build_wheels.py  setup_wsl2.sh  upload_wheels.py
src/: bind_common.h  bind_engine.cpp  bind_imgui_draw.cpp  bind_imgui_layout.cpp  bind_imgui_widgets.cpp  bind_io.cpp  bindings.cpp  engine.cpp  engine.h  log.h  math_types.h  scene_renderer.cpp  scene_renderer.h  tensor_display.cpp  tensor_display.h  tensor_texture.cpp  tensor_texture.h  vk_raii.h  vk_utils.h
src/shaders/: float_to_unorm.comp  plane.frag  plane.vert
tests/: conftest.py  test_camera_light.py  test_capsule_bug.py  test_declarative_api.py  test_edge_cases.py  test_engine_bindings.py  test_gpu_api.py  test_gpu_integration.py  test_import.py  test_normalize_tensor.py  test_panel_widgets_gpu.py  test_project_structure.py  test_scripts.py  test_show.py  test_tools_make_wheel.py  test_tools_spv_to_header.py  test_ui_bindings.py  test_window_a.py  test_window_b.py
tools/: make_wheel.py  spv_to_header.py
tutorial/: 01_hello_tensor.md  01_hello_tensor.zh.md  02_multi_panel.md  02_multi_panel.zh.md  03_tiny_net_training.md  03_tiny_net_training.zh.md  03_training_test.md  03_training_test.zh.md  04_conway.md  04_conway.zh.md  05_image_viewer.md  05_image_viewer.zh.md  06_pixel_canvas.md  06_pixel_canvas.zh.md  07_multichannel.md  07_multichannel.zh.md  08_gt_vs_pred.md  08_gt_vs_pred.zh.md  09_live_tuning.md  09_live_tuning.zh.md  10_gaussian2d.md  10_gaussian2d.zh.md  11_3d_inspector.md  11_3d_inspector.zh.md  12_neural_workstation.md  12_neural_workstation.zh.md  13_snake_rl.md  13_snake_rl.zh.md  14_screen_recorder.md  14_screen_recorder.zh.md  api.md  api.zh.md  index.md  index.zh.md
tutorial/assets/: extra.css
vultorch/: __init__.py  __init__.pyi  app.py  recorder.py  ui.pyi
